# pulumi-statsig

./: .ci-mgmt.yaml  .golangci.yml  .upgrade-config.yml  COPYRIGHT  Makefile  README.md  setup.sh
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/download-tfgen/: action.yml
.github/actions/upload-bin/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  license.yml  prerequisites.yml  publish.yml  resync-build.yml
docs/: _index.md  installation-configuration.md
examples/: examples_test.go  go.mod  go.sum
examples/basic-py/: __main__.py  requirements.txt
examples/basic-ts/: index.ts  package.json
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-statsig/: bridge-metadata.json  main.go  schema.json
provider/shim/: go.mod  go.sum  shim.go
scripts/: crossbuild.mk
sdk/: go.mod  go.sum
sdk/dotnet/: EntityProperty.cs  Experiment.cs  Gate.cs  Keys.cs  Metric.cs  MetricSource.cs  Provider.cs  Pulumi.Statsig.csproj  README.md  Statsig.Pulumi.csproj  Utilities.cs  pulumi-plugin.json
sdk/nodejs/: README.md  entityProperty.ts  experiment.ts  gate.ts  index.ts  keys.ts  metric.ts  metricSource.ts  package.json  provider.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_statsig/: README.md  __init__.py  _inputs.py  entity_property.py  experiment.py  gate.py  keys.py  metric.py  metric_source.py  outputs.py  provider.py
sdk/python/pulumi_statsig/config/: __init__.pyi  vars.py
(+85 files in other folders)
