[project]
  name = "pulumi_statsig"
  description = "A Pulumi package for creating and managing Statsig resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["statsig", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.1"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.statsig.com"
    Repository = "https://github.com/statsig-io/pulumi-statsig"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_statsig = ["py.typed", "pulumi-plugin.json"]
